[package]
name = "geologic"
description = "Mathematical and geometrical abstractions with a focus on ergonomics."

keywords = ["math", "vector", "algebra", "geometry"]
categories = ["rust-patterns", "mathematics", "data-structures"]

version = "0.0.3"
edition = "2021"
license = "MIT"

repository = "https://github.com/Enitoni/geologic"
authors = [
  "Enitoni <root@enitoni.dev>"
]

[dependencies]
num-traits = "0.2.15"